--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 :root {
-  --bg-sec: 245, 245, 245;
-  --bg-main: 255, 255, 255;
+  --bg-sec: 223, 230, 238;
+  --bg-main: 237, 242, 247;
+  --fg-main: 49, 63, 78;
   --gray: 200, 200, 200;
   --transition-d: 250ms;
   --transition-tf: ease-in-out;
@@ -29,4 +30,5 @@
 html {
   background-color: rgb(var(--bg-sec));
   font-family: Inter, 'Times New Roman', Times, serif;
+  color: rgb(var(--fg-main))
 }
